--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -8,6 +8,13 @@
 
 body {
   font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+::selection {
+  background-color: hsl(224 71% 45% / 0.15);
+  color: hsl(224 71% 45%);
 }
 
 .scrollbar-hide {
